--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <br>
         <br>
         <div>
+            Game PK:
+            <input type="text" id="game_pk" name="game_pk" value="">
+        </div>
+        <div>
             Game URL:
             <input type="text" id="game_url" name="game_url" value="">
         </div>
