--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
         <p>UNDER CONSTRUCTION</p>
         <br>
         <div>
-                Game ID:
-                <input type="text" id="game_id" name="game_id" pattern="\d{1,5}" value="">
+            Base URL:
+            <input type="text" id="base_url" name="Base_url" value="http://127.0.0.1:8000/">
+        </div>
+        <div>
+            <button <input type="button" onclick="goto_login()" value ="login">Login to site</button>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div>
+            Game ID:
+            <input type="text" id="game_id" name="game_id" pattern="\d{1,5}" value="">
         </div>
         <div>
                 Developer ID:
