--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br>
         <div>
             Base URL:
-            <input type="text" id="base_url" name="Base_url" value="https://obscure-reef-34009.herokuapp.com">
+            <input type="text" id="base_url" name="Base_url" value="https://obscure-reef-34009.herokuapp.com/">
         </div>
         <div>
             <button <input type="button" onclick="goto_login()" value ="login">Login to site</button>
