--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <title>RESTfull API test</title>
+        <title>RESTful API test</title>
         <meta charset="utf-8">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>RESTfull API test</h1>
-        <p>This is the test page to test RESTfull API developed for awebsoftware development course.</p>
+        <p>This is the test page to test RESTful API developed for awebsoftware development course.</p>
         <p>Insert data to input boxes and press buttons. Results in JSON should appear on the end of the page.</p>
         <p>UNDER CONSTRUCTION</p>
         <br>
