--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="script/restfull.js"></script>
     </head>
     <body>
-        <h1>RESTfull API test</h1>
+        <h1>RESTful API test</h1>
         <p>This is the test page to test RESTful API developed for awebsoftware development course.</p>
         <p>Insert data to input boxes and press buttons. Results in JSON should appear on the end of the page.</p>
         <p>UNDER CONSTRUCTION</p>
