--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <br>
         <br>
         <div>
-            Game ID:
-            <input type="text" id="game_id" name="game_id" pattern="\d{1,5}" value="">
+            Game slug:
+            <input type="text" id="game_slug" name="game_slug" value="">
         </div>
         <div>
                 Developer ID:
@@ -41,10 +41,6 @@
         </div>
         <br>
         <br>
-        <div>
-            Game PK:
-            <input type="text" id="game_pk" name="game_pk" value="">
-        </div>
         <div>
             Game URL:
             <input type="text" id="game_url" name="game_url" value="">
