--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br>
         <div>
             Base URL:
-            <input type="text" id="base_url" name="Base_url" value="https://obscure-reef-34009.herokuapp.com/">
+            <input type="text" id="base_url" name="Base_url" value="https://rocky-caverns-63102.herokuapp.com//">
         </div>
         <div>
             API key:
