--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <input type="text" id="game_title" name="game_title" value="">
         </div>
         <div>
+            Game slug:
+            <input type="text" id="game_slug_add" name="game_slug_add" value="">
+        </div>
+        <div>
             Description:
             <input type="text" id="game_description" name="game_description" value="">
         </div>
